--- a/notebook/mongoDB_demo.ipynb
+++ b/notebook/mongoDB_demo.ipynb
@@ -172,15 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "77294673",
    "metadata": {},
    "outputs": [],
    "source": [
     "DB_NAME = \"Proj1\"\n",
     "COLLECTION_NAME = \"Proj1-Data\"\n",
-    "#CONNECTION_URL = \"mongodb+srv://vikashdas770:WtwsW3eh6T3J0h6z@cluster0.0aygk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
-    "CONNECTION_URL = \"mongodb+srv://amanonkarsingh7789_db_user:IlDNYM2jOm6oAvxv@cluster0.otlyeew.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
+    "CONNECTION_URL = \"mongodb+srv://amanonkarsingh7789_db_user:\"\n",
     "\n",
     "# above, either remove your credentials or delete the mongoDB resource bofore pushing it to github."
    ]
